# dlib-wrapper

./: .gitignore  Dockerfile  LICENSE  README.md  dlib-encoder.ipynb  dlibWrapper.py  docker-compose.yaml  image_links.parquet  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yaml
dlib_wrapper/: __init__.py  dlibWrapper.py
examples/: examples.py  examples_colab.ipynb
tests/: test_dlibWrapper.py
